--- a/iframe.html
+++ b/iframe.html
@@ -23,9 +23,10 @@
             border: none;
             height: 100vh;
             width: 100%;
-            margin-left: auto;
+            transition: width 300ms;
         }
 
+        /* buttonMenu */
         .float {
             position: fixed;
             cursor: pointer;
@@ -46,7 +47,7 @@
             margin-top: 22px;
         }
 
-
+        /* Menu */
         ul {
 
             list-style-type: none;
@@ -57,8 +58,9 @@
             box-shadow: 2px 2px 3px #999;
             position: fixed;
             height: 100%;
-            left: -200px;
             overflow: auto;
+            transform: translateX(-100%);
+
         }
 
         li a {
@@ -69,8 +71,8 @@
         }
 
         li a.active {
-            height: 24px;
-            padding: 8px 0px 8px 80%;
+            display: flex;
+            justify-content: space-between;
             background-color: #F37A01;
             color: white;
             cursor: pointer;
@@ -81,13 +83,7 @@
             color: white;
         }
 
-        li label {
-            display: block;
-            padding: 8px 16px;
-            text-decoration: none;
-            color: black;
-        }
-
+        /* transition */
         .openMenu_menu {
             list-style-type: none;
             margin: 0;
@@ -96,10 +92,10 @@
             background-color: white;
             box-shadow: 2px 2px 3px #999;
             position: fixed;
-            height: 100vh;
+            height: 100%;
             overflow: auto;
-            left: 0px;
-            transition: left 300ms;
+            transform: translateX(0);
+            transition: transform 300ms;
         }
 
         .reOpenMenu_menu {
@@ -110,9 +106,9 @@
             background-color: white;
             box-shadow: 2px 2px 3px #999;
             position: fixed;
-            height: 100vh;
-            left: 0px;
+            height: 100%;
             overflow: auto;
+            transform: translateX(0);
         }
 
         .closeMenu_menu {
@@ -123,10 +119,10 @@
             background-color: white;
             box-shadow: 2px 2px 3px #999;
             position: fixed;
-            height: 100vh;
+            height: 100%;
             overflow: auto;
-            left: -200px;
-            transition: left 300ms;
+            transform: translateX(-100%);
+            transition: transform 300ms;
         }
 
         .openMenu_buttonMenu {
@@ -160,20 +156,21 @@
             transition: visibility 300ms;
         }
 
+        #frame {
+            overflow: auto;
+        }
+
         .openMenu_frame {
             transition: margin-left 300ms;
             margin-left: 200px;
-            /* width: 85vw; */
         }
 
         .reOpenMenu_frame {
-            /* width: 85vw; */
             margin-left: 200px;
         }
 
         .closeMenu_frame {
             transition: margin-left 300ms;
-            /* width: 100vw; */
             margin-left: 0px;
         }
     </style>
@@ -184,14 +181,17 @@
         <i class="fa fa-bars my-float "></i>
     </a>
     <ul id="menu">
-        <li><a class="active" onclick="closeMenu()"><i class="fa fa-bars"></i></a></li>
-        <li><label>Dek-d Menu</label></li>
+        <li><a class="active" onclick="closeMenu()"><label>Dek-d Menu</label><i class="fa fa-bars"></i></a></li>
         <li><a id="dek-d_button" href="?page=dek-d">Dek-d main</a></li>
         <li><a id="writer_button" href="?page=writer">Dek-d writer</a></li>
         <li><a id="school_button" href="?page=school">Dek-d school</a></li>
         <li><a id="tcas_button" href="?page=tcas">Dek-d tcas</a></li>
+        <li><a id="cph_button" href="?page=cph">Dek-d Course Price history</a></li>
+        <li><a id="cptm_button" href="?page=cptm">Dek-d Course Price time machine</a></li>
     </ul>
-    <iframe id="frame" name="iframe_bar" src="https://www.dek-d.com/"></iframe>
+    <div id="frame">
+        <iframe id="iframe" name="iframe_bar" src="https://www.dek-d.com/"></iframe>
+    </div>
 </body>
 <script>
     checkMenu()
@@ -209,31 +209,38 @@
         sessionStorage.clear();
 
     }
+    function changeMenuColor(nameId) {
+        document.getElementById(nameId).style.backgroundColor = "#555"
+        document.getElementById(nameId).style.color = "white"
+    }
     function checkMenu() {
         let params = (new URL(document.location)).searchParams;
         let page = params.get('page');
         if (page) {
-            console.log()
             switch (page) {
                 case "dek-d":
-                    document.getElementById("frame").setAttribute("src", "https://www.dek-d.com/");
-                    document.getElementById("dek-d_button").style.backgroundColor = "#555"
-                    document.getElementById("dek-d_button").style.color = "white"
+                    document.getElementById("iframe").setAttribute("src", "https://www.dek-d.com/");
+                    changeMenuColor("dek-d_button");
                     break;
                 case "writer":
-                    document.getElementById("frame").setAttribute("src", "https://www.dek-d.com/home/writer");
-                    document.getElementById("writer_button").style.backgroundColor = "#555"
-                    document.getElementById("writer_button").style.color = "white"
+                    document.getElementById("iframe").setAttribute("src", "https://www.dek-d.com/home/writer");
+                    changeMenuColor("writer_button");
                     break;
                 case "school":
-                    document.getElementById("frame").setAttribute("src", "https://school.dek-d.com/");
-                    document.getElementById("school_button").style.backgroundColor = "#555"
-                    document.getElementById("school_button").style.color = "white"
+                    document.getElementById("iframe").setAttribute("src", "https://school.dek-d.com/");
+                    changeMenuColor("school_button");
                     break;
-                    case "tcas":
-                    document.getElementById("frame").setAttribute("src", "https://www.dek-d.com/tcas/");
-                    document.getElementById("tcas_button").style.backgroundColor = "#555"
-                    document.getElementById("tcas_button").style.color = "white"
+                case "tcas":
+                    document.getElementById("iframe").setAttribute("src", "https://www.dek-d.com/tcas/");
+                    changeMenuColor("tcas_button");
+                    break;
+                case "cph":
+                    document.getElementById("iframe").setAttribute("src", "file:///D:/projects/profit_form/courses_price_history.html");
+                    changeMenuColor("cph_button");
+                    break;
+                case "cptm":
+                    document.getElementById("iframe").setAttribute("src", "file:///D:/projects/profit_form/courses_price_time_machine.html");
+                    changeMenuColor("cptm_button");
                     break;
                 default:
                     alert("not have page")
